<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:background="@color/colorlayoutprincipal"
        android:backgroundTint="@color/colorlayoutprincipal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#E3E3E3"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/saldo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSaldoConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="33sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/coloritem"
                app:cardCornerRadius="10dp">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/coloritem"
                    android:contentDescription="TODO"
                    android:onClick="cadastrarCartao"
                    android:src="@drawable/ic_baseline_add_card_24"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cardBackgroundColor="@color/coloritem"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/recarga_celular"
                    android:onClick="RecargaCel"
                    android:src="@drawable/ic_baseline_phone_android_24"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/coloritem"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/pagar_pessoas"
                    android:onClick="pagarPessoas"
                    android:src="@drawable/ic_baseline_people_outline_24" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Adicionar Cartão"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/recarga_celular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pagar_pessoas"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/coloritem"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/bilhete_nico"
                    android:onClick="RecarBilhete"
                    android:src="@drawable/ic_baseline_directions_bus_24" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cardBackgroundColor="@color/coloritem"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"

                    android:contentDescription="@string/bilhete_nico"
                    android:onClick="abrirExtrato"
                    android:src="@drawable/icons_extrato" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/coloritem"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_baseline_qr_code_scanner_24"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bilhete_nico"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/extrato"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pagar_qr_code"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textBoasVindas"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/verdeprincipal"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Menu Principal"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.31">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            app:srcCompat="@drawable/logo360" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textBoasVindas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="abrirEditarPerfil"
            android:src="@drawable/fotominha2"
            app:civ_border_color="#AAA9A9"
            app:civ_border_width="1dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/apelido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>